# cmake_project_template

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile.sh  main.cpp
.cache/clangd/index/: main.cpp.00ED7105A71D95A9.idx
dependencies/include/: header.cpp
dependencies/lib/: lib.h
